--- a/src/themes/day.scss
+++ b/src/themes/day.scss
@@ -15,6 +15,7 @@ $row-shadow-color: #aaa;
 $row-background: initial;
 
 $button-color: rgba(128, 128, 128, 0.10);
+$button-text-color: $text-color;
 $active-button-color: rgba(128, 128, 128, 0.30);
 
 body.day {
