--- a/src/themes/fancy.scss
+++ b/src/themes/fancy.scss
@@ -15,14 +15,13 @@ $row-shadow-color: $secondary-background;
 $row-background: inherit;
 
 $button-color: #5b2b9930;
+$button-text-color: $text-color;
 $active-button-color: #5b2b9970;
 
-@import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&display=swap'); //  'Ballet', 'Pinyon Script'
+@import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=GFS+Didot&display=swap'); //  'Ballet', 'Pinyon Script', 'Meie Script', 'Fleur De Leah'
 body.fancy,
 body.fancy .title,
-body.fancy input[type=search],
-body.fancy .setting,
-body.fancy .button {
+body.fancy input[type=search] {
     font-family: 'Fleur De Leah', 'GFS Didot', 'EB Garamond', serif;
 }
 
