--- a/src/themes/halloween.scss
+++ b/src/themes/halloween.scss
@@ -14,6 +14,7 @@ $row-shadow-color: #222;
 $row-background: initial;
 
 $button-color: rgba(128, 128, 128, 0.10);
+$button-text-color: $text-color;
 $active-button-color: rgba(128, 128, 128, 0.30);
 
 body.halloween {
