--- a/src/themes/neo.scss
+++ b/src/themes/neo.scss
@@ -1,4 +1,3 @@
-/* Colors */
 $f-red: rgb(220, 53, 69);
 $f-orange: #FF642B;
 $f-orange-light: #FB9C74;
@@ -19,34 +18,34 @@ $f-sky: #58a7cb;
 $f-green: #197F2A;
 $f-onyx: #221F20;
 
+$text-color: #333;
 
-$text-color: #ddd;
+$secondary-background: $f-light;
 $secondary-text-color: $text-color;
-$body-background: $f-onyx;
-$secondary-background: lighten($f-onyx, 10%);
-$highlight-color: $f-gray-navy;
-$highlight-text-color: $text-color;
+
+$highlight-color: $f-orange;
+$highlight-text-color: #000;
+
 $navbar-background: $highlight-color;
-$dropdown-background: $body-background;
-$sheet-music-filter: invert(0.8);
-$success: $f-green;
+$dropdown-background: #fff;
 
+$sheet-music-filter: none;
+$success: #0E0;
 
-$row-shadow-color: $secondary-background;
-$row-background: inherit;
+$row-shadow-color: rgba(0,0,0,0);
 
-$button-color: rgba($f-gray-violet, 0.4);
-$button-text-color: $text-color;
-$active-button-color: rgba($f-gray-violet, 0.7);
+$button-color: $f-navy;
+$button-text-color: $f-white;
+$active-button-color: rgba(128, 128, 128, 0.30);
 
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
-body.galaxy {
-    background: $body-background;
+body.neo {
+    background-color: $f-white;
     color: $text-color;
-
     font-family: 'Libre Franklin', 'Arial', sans-serif;
     & .navbar .title {font-family: 'Libre Franklin', 'Arial', sans-serif;}
-    
+    & table.songbook tr:nth-child(odd) {background-color: $f-light;}
+    & .button {color: $f-light;}
     & .component-settings {font-size: 1.1em;}
 
     @import "../components/index.scss";
