--- a/src/themes/night.scss
+++ b/src/themes/night.scss
@@ -13,6 +13,7 @@ $row-shadow-color: #111;
 $row-background: initial;
 
 $button-color: rgba(128, 128, 128, 0.10);
+$button-text-color: $text-color;
 $active-button-color: rgba(128, 128, 128, 0.30);
 
 body.night {
