--- a/src/themes/galaxy.scss
+++ b/src/themes/galaxy.scss
@@ -45,6 +45,9 @@ body.galaxy {
     color: $text-color;
 
     font-family: 'Libre Franklin', 'Arial', sans-serif;
+    letter-spacing: 0.01em;
+    word-spacing: 0.02em;
+    
     & .navbar .title {font-family: 'Libre Franklin', 'Arial', sans-serif;}
     
     & .component-settings {font-size: 1.1em;}
