Added THS chapter.

--- a/src/themes/day.scss
+++ b/src/themes/day.scss
@@ -9,6 +9,7 @@ $navbar-background: $highlight-color;
 $dropdown-background: #fff;
 
 $sheet-music-filter: none;
+$inline-image-filter: none;
 $success: #0E0;
 
 $row-shadow-color: #aaa;
