--- a/src/themes/halloween.scss
+++ b/src/themes/halloween.scss
@@ -7,6 +7,7 @@ $highlight-text-color: #fff;
 $navbar-background: #222117;
 $dropdown-background: $body-background;
 $sheet-music-filter: none;
+$inline-image-filter: none;
 $success: #0E0;
 
 
