--- a/src/themes/neo.scss
+++ b/src/themes/neo.scss
@@ -30,6 +30,7 @@ $navbar-background: $highlight-color;
 $dropdown-background: #fff;
 
 $sheet-music-filter: none;
+$inline-image-filter: none;
 $success: #0E0;
 
 $row-shadow-color: rgba(0,0,0,0);
