--- a/src/themes/night.scss
+++ b/src/themes/night.scss
@@ -7,6 +7,7 @@ $highlight-text-color: #000;
 $navbar-background: $highlight-color;
 $dropdown-background: $body-background;
 $sheet-music-filter: invert(0.6);
+$inline-image-filter: invert(1);
 $success: #0E0;
 
 $row-shadow-color: #111;
