--- a/src/themes/galaxy.scss
+++ b/src/themes/galaxy.scss
@@ -29,6 +29,7 @@ $highlight-text-color: $text-color;
 $navbar-background: $highlight-color;
 $dropdown-background: $body-background;
 $sheet-music-filter: invert(0.8);
+$inline-image-filter: invert(1);
 $success: $f-green;
 
 
