--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -37,6 +37,24 @@
     }
 }
 
-.navbuttons .button img {
+& .navbuttons .button img {
     filter: $inline-image-filter;
+}
+
+& .component-modal > div.modal-box {
+    box-shadow: 0 0 5px $row-shadow-color;
+
+    & header, footer {
+        padding: 0.25em 0;
+        margin: 0;
+    }
+
+    & header {
+        background-color: $highlight-color;
+        color: $highlight-text-color;
+    }
+
+    & > div {
+        background: $body-background;
+    }
 }
