--- a/src/themes/fancy.scss
+++ b/src/themes/fancy.scss
@@ -19,6 +19,9 @@ $button-color: #5b2b9930;
 $button-text-color: $text-color;
 $active-button-color: #5b2b9970;
 
+$modal-text-color: $text-color;
+$modal-background-color: $body-background;
+
 @import url('https://fonts.googleapis.com/css2?family=Fleur+De+Leah&family=GFS+Didot&display=swap'); //  'Ballet', 'Pinyon Script', 'Meie Script', 'Fleur De Leah'
 body.fancy,
 body.fancy .title,
