--- a/src/themes/night.scss
+++ b/src/themes/night.scss
@@ -17,6 +17,9 @@ $button-color: rgba(128, 128, 128, 0.10);
 $button-text-color: $text-color;
 $active-button-color: rgba(128, 128, 128, 0.30);
 
+$modal-text-color: $text-color;
+$modal-background-color: $body-background;
+
 body.night {
     background-size: contain !important;
     background: $body-background;
