--- a/src/themes/day.scss
+++ b/src/themes/day.scss
@@ -19,6 +19,9 @@ $button-color: rgba(128, 128, 128, 0.10);
 $button-text-color: $text-color;
 $active-button-color: rgba(128, 128, 128, 0.30);
 
+$modal-text-color: $text-color;
+$modal-background-color: $secondary-background;
+
 body.day {
     background-color: #fff;
     color: $text-color;
