--- a/src/themes/neo.scss
+++ b/src/themes/neo.scss
@@ -39,6 +39,9 @@ $button-color: $f-navy;
 $button-text-color: $f-white;
 $active-button-color: rgba(128, 128, 128, 0.30);
 
+$modal-text-color: $text-color;
+$modal-background-color: $f-porcelain;
+
 @import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
 body.neo {
     background-color: $f-white;
