Better icon prefixes (#25)

--- a/src/components/index.scss
+++ b/src/components/index.scss
@@ -59,3 +59,9 @@
         background-color: $modal-background-color;
     }
 }
+
+
+/* Other small stuff */
+& img.inline {
+    filter: $inline-image-filter;
+  }
