All settings components ported to JSX

--- a/src/components/settings/index.scss
+++ b/src/components/settings/index.scss
@@ -41,3 +41,30 @@
         opacity: 0;
     }
 }
+
+.component-settings-switch {
+    &div.setting {padding: 0.8em 0;}
+
+    & div.switch {
+        float: right;
+        padding: 0;
+  
+        &>span {
+        font-size: 0.8em;
+          border-width: 1px 0px;
+          border-style: solid;
+          display: inline-block;
+          padding: 0.2em 0.5em;
+        }
+        &>span:first-child {
+          border-left-width: 1px;
+          border-top-left-radius: 0.4em;
+          border-bottom-left-radius: 0.4em;
+        }
+        &>span:last-child {
+          border-right-width: 1px;
+          border-top-right-radius: 0.4em;
+          border-bottom-right-radius: 0.4em;
+        }
+    }
+}
