--- a/src/themes/fancy.scss
+++ b/src/themes/fancy.scss
@@ -42,6 +42,6 @@ body.fancy {
     background-color: #000;
     color: $text-color;
 
-    @import "../components/index.scss";
-    @import "../views/index.scss";
+    @import "../components/themed.scss";
+    @import "../views/themed.scss";
 }
