--- a/src/themes/galaxy.scss
+++ b/src/themes/galaxy.scss
@@ -56,6 +56,6 @@ body.galaxy {
     
     & .component-settings {font-size: 1.1em;}
 
-    @import "../components/index.scss";
-    @import "../views/index.scss";
+    @import "../components/themed.scss";
+    @import "../views/themed.scss";
 }
