--- a/src/components/settings/Settings.scss
+++ b/src/components/settings/Settings.scss
@@ -19,7 +19,7 @@
     transition: top 0.3s ease-in-out;
     z-index: 9;
 
-    & > div {
+    &>div {
         width: 100%;
         padding: 0.8em 0;
     }
@@ -43,28 +43,32 @@
 }
 
 .component-settings-switch {
-    &div.setting {padding: 0.8em 0;}
+    &div.setting {
+        padding: 0.8em 0;
+    }
 
     & div.switch {
         float: right;
         padding: 0;
-  
+
         &>span {
-        font-size: 0.8em;
-          border-width: 1px 0px;
-          border-style: solid;
-          display: inline-block;
-          padding: 0.2em 0.5em;
+            font-size: 0.8em;
+            border-width: 1px 0px;
+            border-style: solid;
+            display: inline-block;
+            padding: 0.2em 0.5em;
         }
+
         &>span:first-child {
-          border-left-width: 1px;
-          border-top-left-radius: 0.4em;
-          border-bottom-left-radius: 0.4em;
+            border-left-width: 1px;
+            border-top-left-radius: 0.4em;
+            border-bottom-left-radius: 0.4em;
         }
+
         &>span:last-child {
-          border-right-width: 1px;
-          border-top-right-radius: 0.4em;
-          border-bottom-right-radius: 0.4em;
+            border-right-width: 1px;
+            border-top-right-radius: 0.4em;
+            border-bottom-right-radius: 0.4em;
         }
     }
 }
