--- a/src/themes/fancy.scss
+++ b/src/themes/fancy.scss
@@ -1,3 +1,5 @@
+// This theme is not maintained, and might not work as intended.
+
 /* Colors */
 $text-color: #b7b7b7;
 $secondary-text-color: $text-color;
@@ -13,7 +15,6 @@ $success: #f00;
 
 
 $row-shadow-color: $secondary-background;
-$row-background: inherit;
 
 $button-color: #5b2b9930;
 $button-text-color: $text-color;
