--- a/src/views/song/SheetMusicRenderer.scss
+++ b/src/views/song/SheetMusicRenderer.scss
@@ -1,8 +1,9 @@
 .component-sheet-music-renderer {
-
     /* Layout */
     img {
         width: 100%;
+        filter: var(--image-filter-sheetmusic, invert(0.6));
+        /* Originally #c2ad99 for night theme*/
     }
 
     & .err {
@@ -22,5 +23,7 @@
     & .notice {
         text-align: center;
         font-size: 75%;
+        color: var(--text-color-primary, #ddd);
+        opacity: 0.6;
     }
 }
