--- a/src/themes/neo.scss
+++ b/src/themes/neo.scss
@@ -19,6 +19,7 @@ body.neo {
         $--row-shadow-color: transparent,
         $--image-filter-sheetmusic: none,
         $--image-filter-inline: none,
+        $--image-filter-inline-highlight: invert(1),
     ));
 
     // Overrides
