--- a/src/views/Generator.scss
+++ b/src/views/Generator.scss
@@ -20,6 +20,7 @@
       float: right;
       // background-color: #f0f0f0;
       text-align: right;
+      color: var(--text-color-primary, #ccc)
     }
   }
 }
