--- a/src/themes/neo.scss
+++ b/src/themes/neo.scss
@@ -1,6 +1,6 @@
 @import "colors";
 @import "variables";
-@import url('https://fonts.googleapis.com/css2?family=Libre+Franklin&display=swap');
+@import './themes/gfonts/Libre_Franklin.css';
 
 $text-color: #333;
 
