Make title link to home page

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -30,6 +30,7 @@
   }
   & .title {
     color: white;
+    text-decoration:none;
     font-family: "Lato", sans-serif;
     position: absolute;
     width: 100%;
