Make title link to home page, make title stay centered

--- a/src/components/Navbar.scss
+++ b/src/components/Navbar.scss
@@ -39,5 +39,9 @@
     font-size: 1.1em;
     padding-top: 0.4em;
     z-index: -1;
+    a {
+      color: inherit;
+      text-decoration: inherit;
+    }
   }
 }
